@@ -22,3 +22,20 @@ type Message struct {
 type Reader interface {
 	Next() (Message, error)
 }
+
+// IsEmpty returns true in case the message is empty
+// A message with only newline character is counted as an empty message
+func (m *Message) IsEmpty() bool {
+	// If no Bytes were read, event is empty
+	// For empty line Bytes is at least 1 because of the newline char
+	if m.Bytes == 0 {
+		return true
+	}
+
+	// Content length can be 0 because of JSON events. Content and Fields must be empty.
+	if len(m.Content) == 0 && len(m.Fields) == 0 {
+		return true
+	}
+
+	return false
+}
